Avoiding possible null pointer exceptions.